# sidetrek-python

./: pyproject.toml
sidetrek/nbdev/: directives.py
