[tool.poetry]
name = "sidetrek"
version = "0.1.0"
description = ""
authors = ["Seungchan Lee <seunggs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nbdev = "^2.3.25"
trino = "^0.329.0"
dagster = "^1.7.13"
dbt-core = "^1.8.3"
dbt-trino = "^1.8.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
